--- a/GataryLabs.SwfBox.Views/MainWindow.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindow.xaml
@@ -1,21 +1,31 @@
-﻿<adonisControls:AdonisWindow x:Class="GataryLabs.SwfBox.MainWindow"
-        xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
-        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+﻿<views:MvvmWindow x:Class="GataryLabs.SwfBox.Views.MainWindow"
+        xmlns:views="clr-namespace:GataryLabs.SwfBox.Views"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GataryLabs.SwfBox"
+        xmlns:viewModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
         mc:Ignorable="d"
         TitleVisibility="Collapsed"
         IconVisibility="Collapsed"
-        Height="450" Width="800">
+        Height="450" Width="800"
+        d:DataContext="{d:DesignInstance viewModels:IMainWindowViewModel, IsDesignTimeCreatable=False}">
 
-    <Window.Style>
+    <views:MvvmWindow.Style>
         <Style TargetType="Window" BasedOn="{StaticResource ResourceKey={x:Type Window}}"/>
-    </Window.Style>
+    </views:MvvmWindow.Style>
 
     <Grid>
+        <DockPanel LastChildFill="True">
+            <Grid DockPanel.Dock="Left" Background="Aqua" Width="200">
+                
+            </Grid>
 
+            <Grid DockPanel.Dock="Right" Background="Green">
+                <ContentControl ContentTemplate="{Binding MainContentViewModel}">
+                    
+                </ContentControl>
+            </Grid>
+        </DockPanel>
     </Grid>
-</adonisControls:AdonisWindow>
+</views:MvvmWindow>
