--- a/GataryLabs.SwfBox/App.xaml
+++ b/GataryLabs.SwfBox/App.xaml
@@ -7,6 +7,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/GataryLabs.SwfBox.Views;component/Styles/MainStyles.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/GataryLabs.SwfBox.Views;component/Templates/MainContentTemplateResources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
