--- a/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindowSwfDetailsContentView.xaml
@@ -1,12 +1,13 @@
-﻿<local:ContentView x:Class="GataryLabs.SwfBox.Views.MainWindowSwfDetailsContentView"
+﻿<views:ContentView x:Class="GataryLabs.SwfBox.Views.MainWindowSwfDetailsContentView"
+             xmlns:views="clr-namespace:GataryLabs.SwfBox.Views"
+             xmlns:viewModels="clr-namespace:GataryLabs.SwfBox.ViewModels.Abstractions;assembly=GataryLabs.SwfBox.ViewModels.Abstractions"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GataryLabs.SwfBox.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance viewModels:IMainWindowViewModel, IsDesignTimeCreatable=False}">
+             d:DataContext="{d:DesignInstance viewModels:IMainWindowSwfDetailsContentViewModel, IsDesignTimeCreatable=False}">
     <Grid>
         <ScrollViewer>
             <Grid>
@@ -48,4 +49,4 @@
             </Grid>
         </ScrollViewer>
     </Grid>
-</local:ContentView>
+</views:ContentView>
