--- a/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
+++ b/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!-- Main panel -->
+    
     <Style x:Key="Main.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="22"/>
@@ -13,6 +15,10 @@
     
     <Style x:Key="Main.Paragraph" TargetType="Label">
         <Setter Property="FontSize" Value="12"/>
+    </Style>
+    
+    <Style x:Key="Main.Panel.Card" TargetType="Panel">
+        <Setter Property="Margin" Value="20"/>
     </Style>
     
 </ResourceDictionary>
