--- a/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
+++ b/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
@@ -1,7 +1,33 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!-- Colors -->
+    
+    <!-- Fonts -->
+    
+    
+    
     <!-- Main panel -->
+
+    <Style x:Key="Main.ActionButton.Basic" TargetType="Button">
+        <Setter Property="Background" Value="#999999"/>
+        <Setter Property="Foreground" Value="#FFFFFF"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="#999999"/>
+    </Style>
+
+    <Style x:Key="Main.ActionButton.Big" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="MinWidth" Value="120"/>
+        <Setter Property="Height" Value="36"/>
+    </Style>
+
+    <Style x:Key="Main.ActionButton.Small" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
+        <Setter Property="FontWeight" Value="Regular"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="MinWidth" Value="100"/>
+    </Style>
     
     <Style x:Key="Main.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
@@ -16,9 +42,37 @@
     <Style x:Key="Main.Paragraph" TargetType="Label">
         <Setter Property="FontSize" Value="12"/>
     </Style>
+   
+    <Style x:Key="Main.Paragraph.TextBlock" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="12"/>
+    </Style>
+    
+    <Style x:Key="Main.SideBoard.Border" TargetType="Border">
+        <Setter Property="Padding" Value="20"/>
+        <Setter Property="Background" Value="#9E9E9E"/>
+    </Style>
+    
+    <Style x:Key="Main.MainRegion.Border" TargetType="Border">
+        <Setter Property="Padding" Value="20"/>
+        <Setter Property="Background" Value="#E0E0E0"/>
+    </Style>
+
+    <Style x:Key="Main.Panel.SubRegion.Header" TargetType="Panel">
+        <Setter Property="Margin" Value="20"/>
+    </Style>
+    
+    <Style x:Key="Main.Panel.SubRegion.Content" TargetType="Panel">
+        <Setter Property="Margin" Value="20"/>
+    </Style>
     
     <Style x:Key="Main.Panel.Card" TargetType="Panel">
-        <Setter Property="Margin" Value="20"/>
+        <Setter Property="Background" Value="#C9C9C9"/>
+    </Style>
+    
+    <Style x:Key="Main.Panel.Card.Border" TargetType="Border">
+        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Padding" Value="10"/>
     </Style>
     
 </ResourceDictionary>
