--- a/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
+++ b/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
@@ -1,78 +1,98 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib" >
 
     <!-- Colors -->
-    
+
+    <SolidColorBrush x:Key="Theme.Background.MainRegion" Color="#E0E0E0" />
+    <SolidColorBrush x:Key="Theme.Background.MainRegion.Card" Color="#C9C9C9" />
+    <SolidColorBrush x:Key="Theme.BorderBrush.MainRegion.Card" Color="#FFFFFF" />
+    <SolidColorBrush x:Key="Theme.Background.MenuBar" Color="#9E9E9E" />
+    <SolidColorBrush x:Key="Theme.Background.Button" Color="#999999" />
+    <SolidColorBrush x:Key="Theme.Foreground.Button" Color="#FFFFFF" />
+    <SolidColorBrush x:Key="Theme.BorderBrush.Button" Color="#999999" />
+
     <!-- Fonts -->
-    
-    
+
+    <system:Double x:Key="Theme.FontSize.Headline.Huge">22</system:Double>
+    <system:Double x:Key="Theme.FontSize.Headline.Big">16</system:Double>
+    <system:Double x:Key="Theme.FontSize.Headline.Medium">14</system:Double>
+    <system:Double x:Key="Theme.FontSize.Paragraph">12</system:Double>
+    <system:Double x:Key="Theme.FontSize.Button.Big">16</system:Double>
+    <system:Double x:Key="Theme.FontSize.Button.Small">12</system:Double>
+
+    <!-- Spacing -->
+
+    <Thickness x:Key="Theme.Thickness.Big">20</Thickness>
+    <Thickness x:Key="Theme.Thickness.Small">10</Thickness>
+    <system:Double x:Key="Theme.Spacing.Small">10</system:Double>
     
     <!-- Main panel -->
 
     <Style x:Key="Main.ActionButton.Basic" TargetType="Button">
-        <Setter Property="Background" Value="#999999"/>
-        <Setter Property="Foreground" Value="#FFFFFF"/>
+        <Setter Property="Background" Value="{StaticResource Theme.Background.Button}"/>
+        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.Button}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.Button}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="BorderBrush" Value="#999999"/>
     </Style>
 
     <Style x:Key="Main.ActionButton.Big" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Button.Big}"/>
         <Setter Property="MinWidth" Value="120"/>
         <Setter Property="Height" Value="36"/>
     </Style>
 
     <Style x:Key="Main.ActionButton.Small" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
         <Setter Property="FontWeight" Value="Regular"/>
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Button.Small}"/>
         <Setter Property="MinWidth" Value="100"/>
     </Style>
     
     <Style x:Key="Main.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Huge}"/>
     </Style>
     
     <Style x:Key="Main.Headline.Medium" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Medium}"/>
     </Style>
     
     <Style x:Key="Main.Paragraph" TargetType="Label">
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
     </Style>
    
     <Style x:Key="Main.Paragraph.TextBlock" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
     </Style>
     
-    <Style x:Key="Main.SideBoard.Border" TargetType="Border">
-        <Setter Property="Padding" Value="20"/>
-        <Setter Property="Background" Value="#9E9E9E"/>
+    <Style x:Key="Main.SideBar.Border" TargetType="Border">
+        <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Big}"/>
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MenuBar}"/>
     </Style>
     
     <Style x:Key="Main.MainRegion.Border" TargetType="Border">
-        <Setter Property="Padding" Value="20"/>
-        <Setter Property="Background" Value="#E0E0E0"/>
+        <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Big}"/>
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion}"/>
     </Style>
 
     <Style x:Key="Main.Panel.SubRegion.Header" TargetType="Panel">
-        <Setter Property="Margin" Value="20"/>
+        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
     </Style>
     
     <Style x:Key="Main.Panel.SubRegion.Content" TargetType="Panel">
-        <Setter Property="Margin" Value="20"/>
+        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
     </Style>
     
     <Style x:Key="Main.Panel.Card" TargetType="Panel">
-        <Setter Property="Background" Value="#C9C9C9"/>
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion.Card}"/>
     </Style>
     
     <Style x:Key="Main.Panel.Card.Border" TargetType="Border">
-        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.MainRegion.Card}"/>
         <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="Padding" Value="10"/>
+        <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Small}"/>
     </Style>
     
 </ResourceDictionary>
