+menu bar view model +lazy instance resolving

--- a/GataryLabs.SwfBox.Views/MainWindow.xaml
+++ b/GataryLabs.SwfBox.Views/MainWindow.xaml
@@ -22,7 +22,7 @@
 
                 <Border Style="{StaticResource Main.MenuBar.Border}">
 
-                    <views:MainWindowMenuBar/>
+                    <views:MainWindowMenuBar DataContext="{Binding MenuBarViewModel}"/>
 
                 </Border>
 
