--- a/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
+++ b/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
@@ -1,7 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
                     xmlns:system="clr-namespace:System;assembly=mscorlib" >
 
+    <!-- Adonis theme overrides -->
+    
+    <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#0BAC08</Color>
+    <SolidColorBrush x:Key="{x:Static adonisUi:Brushes.AccentBrush}" Color="{DynamicResource {x:Static adonisUi:Colors.AccentColor}}"/>
+    
     <!-- Colors -->
 
     <SolidColorBrush x:Key="Theme.Background.MainRegion" Color="#E0E0E0" />
@@ -13,9 +19,12 @@
     
     <SolidColorBrush x:Key="Theme.Background.MenuBar" Color="#9E9E9E" />
     <SolidColorBrush x:Key="Theme.Foreground.MenuBar.Headline" Color="#E0E0E0" />
+    <SolidColorBrush x:Key="Theme.Foreground.MenuBar.Button" Color="#232323" />
     <SolidColorBrush x:Key="Theme.Background.MenuBar.Button" Color="#E0E0E0" />
-    <SolidColorBrush x:Key="Theme.Foreground.MenuBar.Button" Color="#9E9E9E" />
     <SolidColorBrush x:Key="Theme.BorderBrush.MenuBar.Button" Color="#9E9E9E" />
+    <SolidColorBrush x:Key="Theme.Background.MenuBar.List" Color="#FFFFFF" />
+    <SolidColorBrush x:Key="Theme.Background.MenuBar.ListItem" Color="#DEDEDE" />
+    <SolidColorBrush x:Key="Theme.Foreground.MenuBar.ListItem" Color="#232323" />
 
     <!-- Fonts -->
 
@@ -54,22 +63,6 @@
         <Setter Property="MinWidth" Value="100"/>
     </Style>
 
-    <Style x:Key="Main.MenuBar.ActionButton.Basic" TargetType="Button">
-        <Setter Property="Background" Value="{StaticResource Theme.Background.MenuBar.Button}"/>
-        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.MenuBar.Button}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.MenuBar.Button}"/>
-        <Setter Property="BorderThickness" Value="0"/>
-    </Style>
-
-    <Style x:Key="Main.MenuBar.ActionButton.Big" TargetType="Button" BasedOn="{StaticResource Main.MenuBar.ActionButton.Basic}">
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Button.Big}"/>
-        <!--
-        <Setter Property="MinWidth" Value="120"/>
-        -->
-        <Setter Property="Height" Value="36"/>
-    </Style>
-
     <Style x:Key="Main.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Huge}"/>
@@ -88,6 +81,39 @@
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
     </Style>
 
+    <Style x:Key="Main.Panel.SubRegion.Header" TargetType="Panel">
+        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
+    </Style>
+
+    <Style x:Key="Main.Panel.SubRegion.Content" TargetType="Panel">
+        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
+    </Style>
+
+    <Style x:Key="Main.Panel.Card" TargetType="Panel">
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion.Card}"/>
+    </Style>
+
+    <Style x:Key="Main.Panel.Card.Border" TargetType="Border">
+        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.MainRegion.Card}"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Small}"/>
+    </Style>
+
+    <!-- Menu bar -->
+
+    <Style x:Key="Main.MenuBar.ActionButton.Basic" TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MenuBar.Button}"/>
+        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.MenuBar.Button}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.MenuBar.Button}"/>
+        <Setter Property="BorderThickness" Value="0"/>
+    </Style>
+
+    <Style x:Key="Main.MenuBar.ActionButton.Big" TargetType="Button" BasedOn="{StaticResource Main.MenuBar.ActionButton.Basic}">
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Button.Big}"/>
+        <Setter Property="Height" Value="36"/>
+    </Style>
+
     <Style x:Key="Main.MenuBar.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Huge}"/>
@@ -104,22 +130,19 @@
         <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion}"/>
     </Style>
 
-    <Style x:Key="Main.Panel.SubRegion.Header" TargetType="Panel">
-        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
+    <Style x:Key="Main.MenuBar.ListBox" TargetType="ListBox">
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MenuBar.List}"/>
     </Style>
-    
-    <Style x:Key="Main.Panel.SubRegion.Content" TargetType="Panel">
-        <Setter Property="Margin" Value="{StaticResource Theme.Thickness.Big}"/>
+
+    <Style x:Key="Main.MenuBar.ItemContainer" TargetType="ListBoxItem">
+        <Setter Property="Height" Value="28"/>
+        <Setter Property="Background" Value="{StaticResource Theme.Background.MenuBar.ListItem}"/>
+        <Setter Property="Margin" Value="1" />
     </Style>
-    
-    <Style x:Key="Main.Panel.Card" TargetType="Panel">
-        <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion.Card}"/>
-    </Style>
-    
-    <Style x:Key="Main.Panel.Card.Border" TargetType="Border">
-        <Setter Property="BorderBrush" Value="{StaticResource Theme.BorderBrush.MainRegion.Card}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Small}"/>
+
+    <Style x:Key="Main.MenuBar.ListItem.Text" TargetType="Label">
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
+        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.MenuBar.ListItem}"/>
     </Style>
 
 </ResourceDictionary>
